<resources>
  <string name="app_name">Поле мобайл</string>

  <!-- UI titles-->
  <string name="title_new_field">Новое поле</string>
  <string name="title_fields_list">Список полей</string>
  <string name="title_actual_processes">"Актуальные процессы"</string>
  <string name="title_field">"Поле: "</string>
  <string name="title_technological_process">"Техпроцесс: "</string>
  <string name="title_technological_process_conditions">"Условия техпроцесса: "</string>
  <string name="title_solution">"Решение: "</string>

  <string name="dialog_action_ok">OK</string>
  <string name="dialog_action_cancel">ОТМЕНА</string>
  <string name="dialog_error_title">Ошибка</string>
  <string name="swipe_action_delete">УДАЛИТЬ</string>
  <string name="swipe_action_cancel">ОТМЕНА</string>
  <string name="warning">Предупреждение</string>
  <string name="warning_permission">Для работы приложения необходимо разрешение определения места положения</string>

  <!-- Add filed type dialog -->
  <string name="dialog_title_add_field">Выберите способ создания поля</string>
  <string name="dialog_error_add_field">Не указан способ создания поля</string>
  <string-array name="dialog_field_add_types">
    <item>Точками на карте</item>
    <item>Обходом с GPS</item>
    <item>Вручную</item>
  </string-array>

  <!-- Error dialog -->
  <string name="dialog_title_error">Ошибка!</string>
  <string name="dialog_error_message_db_fail">Не удалось инициализировать базуд анных</string>

  <!-- Splash screen -->
  <string name="text_preparing">Подготовка базы данных</string>

  <!-- Fields list -->
  <string name="msg_no_fields_data">Нет полей.\nДобавьте новое поле.</string>

  <!-- Field editing -->
  <string name="text_edit_mode">Режим редактирования</string>
  <string name="text_tracking_mode">Режим обхода</string>
  <string name="toggle_button_text_on">Вкл</string>
  <string name="toggle_button_text_off">Выкл</string>
  <string name="edit_text_name_hint">Название</string>
  <string name="edit_text_area_hint">Площадь</string>
  <string name="edit_text_crop_hint">Культура</string>
  <string name="edit_text_previous_crop_hint">Предшественник</string>
  <string name="edit_text_planned_yield_hint">Плановая урожайность</string>
  <string name="edit_text_sowing_date_hint">Дата посева</string>
  <string name="edit_text_quantity_hint">Количество</string>
  <string name="edit_text_price_hint">Цена</string>
  <string name="edit_text_climate_zone">Климатическая зона</string>
  <string name="edit_text_soil_type">Тип почвы</string>
  <string name="edit_text_phase">Фаза</string>
  <string name="edit_text_tech_process_status">Статус</string>
  <string name="edit_text_tech_solution_type">Тип решения</string>
  <string name="edit_text_tech_solution">Решение</string>
  <string name="button_text_edit">ИЗМЕНИТЬ</string>

  <!-- Technological process -->
  <string name="edit_text_technological_process_date_hint">Дата проведения</string>
  <string name="checked_text_technological_process_conditions">Условия проведения</string>
  <string name="text_technological_process_field">"Поле: "</string>

  <!-- Technological process solution -->
  <string name="text_technological_process_solution_sum">"Сумма: %s грн."</string>
</resources>
