<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@color/grey_light"
    android:clickable="true"
    >

  <ScrollView
      android:id="@+id/scroll_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/btn_ok"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light"
        >

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_layout_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >

        <EditText
            android:id="@+id/ed_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_name_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_layout_area"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/it_layout_name"
          >

        <EditText
            android:id="@+id/ed_text_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_area_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>

      <TextView
          android:id="@+id/text_crop"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_crop_hint"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/it_layout_area"
          />

      <Spinner
          android:id="@+id/spinner_crop"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_crop"
          />

      <TextView
          android:id="@+id/text_previous_crop"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_previous_crop_hint"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_crop"
          />

      <Spinner
          android:id="@+id/spinner_previous_crop"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_previous_crop"
          />

      <TextView
          android:id="@+id/text_climate_zone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_climate_zone"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_previous_crop"
          />

      <Spinner
          android:id="@+id/spinner_climate_zone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_climate_zone"
          />

      <TextView
          android:id="@+id/text_soil_type"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_soil_type"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_climate_zone"
          />

      <Spinner
          android:id="@+id/spinner_soil_type"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_soil_type"
          />

      <TextView
          android:id="@+id/text_phase"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_phase"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_soil_type"
          />

      <Spinner
          android:id="@+id/spinner_phase"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_phase"
          />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_planned_yield"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_phase"
          >

        <EditText
            android:id="@+id/ed_text_planned_yield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_planned_yield_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_sowing_date"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/it_planned_yield"
          >

        <EditText
            android:id="@+id/ed_text_sowing_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_sowing_date_hint"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
  </ScrollView>


  <Button
      android:id="@+id/btn_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/common_margin"
      android:layout_marginEnd="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:gravity="end|center_vertical"
      android:text="@string/dialog_action_ok"
      android:textAlignment="textEnd"
      android:textColor="@color/buttons_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      style="@android:style/Widget.Holo.Button.Borderless"
      />

  <Button
      android:id="@+id/btn_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/common_margin"
      android:layout_marginEnd="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:layout_marginTop="@dimen/common_margin"
      android:text="@string/dialog_action_cancel"
      android:textAlignment="center"
      android:textColor="@color/buttons_color"
      app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
      app:layout_constraintRight_toLeftOf="@+id/btn_ok"
      app:layout_constraintTop_toTopOf="@+id/btn_ok"
      style="@android:style/Widget.Holo.Button.Borderless"
      />

</android.support.constraint.ConstraintLayout>