<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.v4.widget.NestedScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:layout_marginTop="@dimen/common_margin"
      app:layout_constraintBottom_toTopOf="@+id/text_total"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:id="@+id/text_solution_type"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_tech_solution_type"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <Spinner
          android:id="@+id/spinner_tech_solution_type"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_solution_type"
          />

      <TextView
          android:id="@+id/text_solution"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          android:layout_marginTop="@dimen/common_margin"
          android:text="@string/edit_text_tech_solution"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_tech_solution_type"
          />

      <Spinner
          android:id="@+id/spinner_tech_solution"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_solution"
          />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_quantity"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinner_tech_solution"
          >

        <EditText
            android:id="@+id/ed_text_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_quantity_hint"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/it_price"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/common_margin"
          android:layout_marginLeft="@dimen/common_margin"
          android:layout_marginRight="@dimen/common_margin"
          android:layout_marginStart="@dimen/common_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/it_quantity"
          >

        <EditText
            android:id="@+id/ed_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_price_hint"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/grey_dark"
            />
      </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
  </android.support.v4.widget.NestedScrollView>

  <TextView
      android:id="@+id/text_total"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:layout_marginTop="@dimen/common_margin"
      android:text="Всего: 7000 грн."
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/btn_ok"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      style="@style/text_large"
      />

  <Button
      android:id="@+id/btn_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/common_margin"
      android:layout_marginEnd="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:gravity="end|center_vertical"
      android:text="@string/dialog_action_ok"
      android:textAlignment="textEnd"
      android:textColor="@color/buttons_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      style="@android:style/Widget.Holo.Button.Borderless"
      />

  <Button
      android:id="@+id/btn_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/common_margin"
      android:layout_marginEnd="@dimen/common_margin"
      android:layout_marginRight="@dimen/common_margin"
      android:layout_marginTop="@dimen/common_margin"
      android:text="@string/dialog_action_cancel"
      android:textAlignment="center"
      android:textColor="@color/buttons_color"
      app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
      app:layout_constraintRight_toLeftOf="@+id/btn_ok"
      app:layout_constraintTop_toTopOf="@+id/btn_ok"
      style="@android:style/Widget.Holo.Button.Borderless"
      />


</android.support.constraint.ConstraintLayout>